Changelog
=========

This document describes changes between past releases. For information about
future releases, check `milestones`_ and :doc:`/about/vision`.


0.6 (unreleased)
----------------

- Nothing changed yet.


0.5 (2014-02-28)
----------------

Introduced CLI and WSGI. They offer basic features (with experimental
implementation), but they should be enough as proof of concepts.

- Feature #39: ``python -m hospital.cli`` collects and runs healthchecks.

- Feature #20: ``python -m hospital.wsgi`` runs a web server that collects
  and runs healthchecks on HTTP GET.


0.4 (2014-02-25)
----------------

Improvements around output of builtin assertions.

- Feature #33: builtin assertions functions accept optional ``msg`` argument.

- Bugfix #31: when ``assert_http_response()`` fails, it provides comprehensive
  message (was "AssertionError" without details about URL and reason).


0.3 (2014-02-09)
----------------

Documentation review and development environment refactoring: let's try to
simplify usage and development of `hospital`.

- Feature #25: the Makefile in project's repository no longer creates a
  virtualenv. Developers setup the environment as they like, i.e. using
  virtualenv, virtualenvwrapper or whatever. Added documentation about the
  Makefile scope and usage.

- Feature #19: reviewed contributor guide, added branching policy.

- Feature #24: added note about project's status in documentation.

- Feature #21: reviewed API documentation.

- Bugfix #18: README can be rendered as HTML with `docutils`' ``rst2html.py``.
  Fixes PyPI information page.


0.2 (2013-12-27)
----------------

Documentation review, API refactoring, addition of some assertions.

- Feature #17: introduced ``assert_http_response`` assertion.

- Feature #16: introduced ``assert_supported_python_version`` assertion.

- Feature #15: exposed API at root of ``hospital`` package. Items not exposed
  in this root API may be moved without notice, whereas root API is tested and