@@ -8,7 +8,9 @@ future releases, check `milestones`_ and :doc:`/about/vision`.
 0.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Feature #44: hospital.wsgi.application is a WSGI endpoint. Added
+  documentation about running healthcheck service with Gunicorn, Chaussette,
+  Circus, and Django via twod.wsgi.
 
 
 0.5 (2014-02-28)
